# Polis

./: .gitignore  AGENTS.md  CLAUDE.md  MASTER_PLAN.md  pyproject.toml
cognition/: __init__.py  completions.py  embedding.py  fake_model.py  memory.py  planning.py  prompts.py  retrieval.py  runner.py  runtime.py  telemetry.py
content/: relationships.json  town.json
experiments/: __init__.py  sweep.py
memory_bank/: MASTER_PLAN.md  activeContext.md  decisionLog.md  glossary.md  productContext.md  progress.md  projectbrief.md  systemPatterns  systemPatterns.md  techContext.md
metrics/: __init__.py  assemble.py  believability.py  coordination.py  diffusion.py  graph.py  probes.py  store.py
observer/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
schemas/: __init__.py
scripts/: gen_models.sh  generate_content.py  live.sh  validate_content.py
services/: __init__.py
sim/: __init__.py  clock.py  content.py  grid.py  ledger.py  perception.py  rng.py  runner.py  scripted.py  stream.py  world.py
tests/: conftest.py  test_assemble.py  test_believability.py  test_cognition_day.py  test_cognition_memory.py  test_completions.py  test_content.py  test_contracts.py  test_conversation_races.py  test_diffusion.py  test_embedding.py  test_gateway.py  test_graph_coordination.py  test_grid.py  test_intents.py  test_ledger.py  test_metrics_probes.py  test_model_mirrors.py  test_perception.py  test_pg_memory.py  test_pg_run_sink.py  test_pg_sink.py  test_planning.py  test_prompt_schemas.py  test_replay_fixture.py  (+5 more)
(+64 files in other folders)
