[project]
name = "polis"
version = "0.1.0"
description = "Research instrument for studying emergent social behavior in LLM-backed generative agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "psycopg[binary]>=3.1",
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "datamodel-code-generator>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim", "cognition", "metrics", "schemas", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
